mdmCeneveo/src/objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_2_weeks_prior__c</fullName>
        <label>Forecast 2 weeks prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_from_Previous_Week__c</fullName>
        <label>Forecast Variance from Previous Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Product</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <formula>Plant_Product__r.Plant__r.Name</formula>
        <label>Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_weeks_forecast__c</fullName>
        <label>Previous weeks forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Plant_Product__r.Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Plant_Product__r.Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Forecast</label>
    <nameField>
        <displayFormat>FO-{000}</displayFormat>
        <label>Forecast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Year_Must_Be_Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER( Year__c ))</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Year must be numeric.</errorMessage>
    </validationRules>
</CustomObject>